--- a/_posts/2017-06-02-intel-8265-wifi-xps-15-9550.md
+++ b/_posts/2017-06-02-intel-8265-wifi-xps-15-9550.md
@@ -27,7 +27,7 @@ I've decided to buy a [Intel 8265](https://ark.intel.com/de/products/94150/Intel
 
 I've installed the card today. However, I've accidentally broke one of the three antenna connectors.
 Luckily, the new card only needs two.
-The new card didn't work out of the box with my Linux Mint 18. That was caused by an outdated kernel (4.4) which doesn't support the Intel 8265
+The new card didn't work out of the box with my Linux Mint 18. That was caused by an outdated kernel (4.4) which doesn't support the Intel 8265.
 
 I've upgraded the kernel to 4.10, downloaded the firmware from [here](https://wireless.wiki.kernel.org/en/users/drivers/iwlwifi), copied it to the /lib/firmware folder and restarted.
 Voilà.
