Install Intel WiFi 8265 into Dell XPS 15 (9550): added speed and bluetooth paragraph

--- a/_posts/2017-06-02-intel-8265-wifi-xps-15-9550.md
+++ b/_posts/2017-06-02-intel-8265-wifi-xps-15-9550.md
@@ -35,3 +35,8 @@ Voilà.
 I haven't done a lot of testing yet, but I can already say the initial connection time is **LOT** less than before.
 Also, after standby the connection is immediately there. With the old card it always took two to three seconds to establish the wifi connection.
 So I am confident this card will be a lot more stable than the previous one.
+
+Speed: I did an internet speed test over WiFi and it is about 58 Mbit/s with my FritzBox 7360, which is alright. It is about the same I get with a MacBook Air.
+
+Bluetooth: I needed to put intel/ibt-12-16.sfi and intel/ibt-12-16.ddc (they are part of this .deb [here](https://packages.debian.org/en/sid/all/firmware-iwlwifi/download)) in the /lib/firmware folder.
+I still have some problems using Bluetooth and WiFi at the same time. [People](https://superuser.com/questions/924559/wifi-connection-troubles-solved-why-does-my-fix-work) [suggested](https://askubuntu.com/questions/645009/wi-fi-and-bluetooth-not-working-simultaneously) to disable bt_coex_active, but that didn't change much for me. And yes I want to use 802.11n.
