fixed two broken image paths

--- a/barbados/_posts/2013-11-14-kuemmern.md
+++ b/barbados/_posts/2013-11-14-kuemmern.md
@@ -46,4 +46,4 @@ Die meisten Anbieter erwarten 100% Vorkasse für eine Mietdauer von drei Monaten
 
 Im Moment sind 28 Grad Celsius ununterbrochen Tag und Nacht in Barbados, leider auch recht viel Regen.
 
-![]({{ site.url }}/images/barbados/7fbcfa34a5ec010ab4443725f363a53a54dd03d83ffee9b89324a891ae1cb5e9.jpg)  
+![]({{ site.url }}/images/barbados/7fbcfa34a5ec010ab4443725f363a53a54dd03d83ffee9b89324a891ae1cb5e9.png)  
