barbados: next 7 posts

--- a/blog/barbados/_posts/2014-01-12-fotos.md
+++ b/blog/barbados/_posts/2014-01-12-fotos.md
@@ -6,7 +6,7 @@ tags:
 - barbados
 - beach
 - party
-title: "Photos"
+title: "Fotos"
 ---
 ![]({{ site.url }}/images/barbados/tumblr_mzayh2wuUx1sk56bgo1_1280.jpg)
 
