--- a/blog/_posts/2018-04-28-sms-api.md
+++ b/blog/_posts/2018-04-28-sms-api.md
@@ -117,6 +117,7 @@ if __name__ == '__main__':
 templates/messages.html
 
 ```html
+{% raw %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -152,4 +153,5 @@ templates/messages.html
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   </body>
 </html>
+{% endraw %}
 ```
