--- a/blog/_posts/2018-05-23-radio.md
+++ b/blog/_posts/2018-05-23-radio.md
@@ -26,14 +26,20 @@ A lot of stuff is done via radio. Of course, there is FM/AM broadcasting, but th
 
 All of them use the same base technology.
 
+# Hardware
+
 If you have a radio which can send and receive on any frequency, you could use all of the above technologies with the same single device.
 There is software which can take the raw radio wave and then run all the complicated [modulation](https://en.wikipedia.org/wiki/Modulation) on it to extract binary data. A radio which works with this kind of software is called [Software-defined radio](https://en.wikipedia.org/wiki/Software-defined_radio). Some radios are the [HackRF One](https://greatscottgadgets.com/hackrf/), the [bladeRF x40](https://www.nuand.com/blog/product/bladerf-x40/), the [LimeSDR](https://myriadrf.org/projects/limesdr/), the [Airspy](https://airspy.com/) and the [USRP](https://www.ettus.com/).
 
 Luckily, there is also [RTL-SDR](https://www.rtl-sdr.com/about-rtl-sdr/), which stands for SDRs based on the very cheap RTL2832U chip. It's 10 EUR on ebay and works in the frequency range from 24 up to 1766 MHz, which doesn't work for WiFi/Bluetooth, but for example GSM. For me it was enough to play around have some fun with.
 
+# Software
+
 A nice tool to visualize the waves is [gqrx](http://gqrx.dk/). Connect the RTL-SDR, install gqrx (I used `sudo pacman -S gqrx` on Manjaro), select the frequency (I used 90.3 MHz for [NDR](https://www.ndr.de/903/index.html)), make sure the mode is set correctly in the dropdown (I used WFM mono), and you are ready to listen to radio on your computer.
 
 ![]({{ site.baseurl }}/images/2018-05-23-radio/notebook.jpg)
+
+# GSM
 
 There is a good series on [YouTube](https://www.youtube.com/watch?v=PExa5sC4sbE) which shows how to receive GSM data and explains it's broken encryption.
 I found it interesting and decided to try it myself.
@@ -66,3 +72,25 @@ Please note that some packages might get lost.
 Of course, GSM transfer is encrypted. So you cannot just read SMS in plain text.
 However, lots of device use the A5/1 algorithm, which can be fairly easy broken by using a 2 TB rainbow table.
 My particular phone (Samsung S7) uses the A5/3 algorithm instead, which is harder to attack, so I stopped here.
+
+# GPS
+
+I've tried to set the frequency to 1575.42 MHz in order to receive GPS signals. Unfortunately, I only saw random noise in gqrx.
+The reason: GPS satellites only send with 50 watts and are ~20,000 km away from us.
+I know it's not really comparable, but I've imagined to look at a 60 W light bulb from that distance. You wouldn't see shit.
+
+But with some incredible tricks (like pseudorandom noise, it's not really random), GPS receivers can still recover the signal.
+The satellites can even send on the same frequency as Galileo for example and the signal can be separated.
+
+I've also found it impressing that time dilation needs to be considered in two ways:
+
+1. The satellites are moving. Therefore, time elapses slower than on earth.
+2. Gravity is lower for the satellites. Therefore, time elapses faster than on earth.
+
+In 20,000 km height, the gravitational effect outclasses the speed effect by factor six.
+So time elapses faster on the satellites than on earth.
+Only by a little tiny bit, but if you don't consider it, your calculated position will be wrong!
+
+I've found something on github which should be able to work with the raw radio data, however I haven't tested it yet:
+[gnss-sdr](https://github.com/gnss-sdr/gnss-sdr)  
+It probably won't work with a passive antenna.
