--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -215,6 +215,63 @@ This worked, however my 'ä' key didn't anymore.
 Even *xev* didn't recognize the key.
 That's why I've changed the shortcut to *Super+dead circumflex*.
 
+# Albert
+
+![]({{ site.baseurl }}/images/2019-07-10-xps-7590/albert.jpg)
+
+```
+sudo pacman -S albert
+sudo pacman -S muparser
+```
+
+*~/.config/albert/albert.conf*
+
+```
+[General]
+frontendId=org.albert.frontend.qmlboxmodel
+hotkey=Alt+F1
+showTray=false
+telemetry=false
+terminal=xfce4-terminal --drop-down
+
+[org.albert.extension.applications]
+enabled=true
+
+[org.albert.extension.calculator]
+enabled=false
+
+[org.albert.extension.hashgenerator]
+enabled=true
+
+[org.albert.extension.terminal]
+enabled=true
+
+[org.albert.extension.virtualbox]
+enabled=true
+
+[org.albert.frontend.qmlboxmodel]
+alwaysOnTop=true
+clearOnHide=false
+hideOnClose=false
+hideOnFocusLoss=true
+showCentered=true
+stylePath=/usr/share/albert/org.albert.frontend.qmlboxmodel/styles/BoxModel/MainComponent.qml
+windowPosition=@Point(289 94)
+
+[org.albert.frontend.widgetboxmodel]
+alwaysOnTop=true
+clearOnHide=false
+displayIcons=true
+displayScrollbar=false
+displayShadow=true
+hideOnClose=false
+hideOnFocusLoss=true
+itemCount=5
+showCentered=true
+theme=DarkOrange
+```
+
+
 # Not working
 
 - Display brightness
