--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -34,6 +34,8 @@ tags:
 
 # Terminal settings
 
+![]({{ site.baseurl }}/images/2019-07-10-xps-7590/terminal.jpg)
+
 *~/.config/xfce4/terminal/terminalrc*
 
 ```
