--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -32,6 +32,10 @@ tags:
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/manjaro-booting.jpg){:width="200px"}
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/manjaro-booted.jpg){:width="200px"}
 
+# Arch Wiki
+
+[https://wiki.archlinux.org/index.php/Dell_XPS_15_7590](https://wiki.archlinux.org/index.php/Dell_XPS_15_7590)
+
 # Terminal settings
 
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/terminal.jpg)
@@ -119,8 +123,9 @@ Modify */etc/intel-undervolt.conf*.
 I've set this on my i9-9980HK:
 
 ```
-undervolt 0 'CPU' -190
+undervolt 0 'CPU' -150
 undervolt 1 'GPU' -75
+undervolt 2 'CPU Cache' -80
 ```
 
 ```
@@ -216,6 +221,46 @@ This worked, however my 'ä' key didn't anymore.
 
 Even *xev* didn't recognize the key.
 That's why I've changed the shortcut to *Super+dead circumflex*.
+
+# xbacklightmon
+
+OLEDs don't have a backlight brightness control. So we can achieve the same effect by changing the gamma.
+
+To test the brightness change manually, run `xrandr --output eDP1 --brightness 0.5`.
+
+*/usr/local/bin/xbacklightmon*
+
+```bash
+#!/bin/sh
+
+path=/sys/class/backlight/intel_backlight
+
+luminance() {
+    read -r level < "$path"/actual_brightness
+    factor=$((max))
+    new_brightness="$(bc -l <<< "scale = 2; $level / $factor")"
+    echo "${new_brightness}"
+}
+
+read -r max < "$path"/max_brightness
+
+xrandr --output eDP1 --brightness "$(luminance)"
+
+inotifywait -me modify "$path"/actual_brightness | while read; do
+    xrandr --output eDP1 --brightness "$(luminance)"
+done
+```
+
+*~/.config/autostart/xbacklightmon.desktop*
+
+```
+[Desktop Entry]
+Type=Application
+Name=xbacklightmon
+Exec=/usr/local/bin/xbacklightmon
+StartupNotify=false
+Terminal=false
+```
 
 # Albert
 
