--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -262,6 +262,37 @@ StartupNotify=false
 Terminal=false
 ```
 
+# slock
+
+slock is a display locker. Clean and fast, no gimmicks.
+
+```bash
+sudo pacman -S slock
+# light-locker opens the lightdm greeter after suspend.
+# I don't want this. Go away.
+sudo pacman -R light-locker
+xfconf-query -c xfce4-session -p /general/LockCommand -s "slock"
+```
+
+*/etc/systemd/system/slock@.service*
+
+```
+[Unit]
+Description=Lock X session using slock for user %i
+Before=sleep.target
+
+[Service]
+User=%i
+Environment=DISPLAY=:0
+ExecStartPre=/usr/bin/xset dpms force suspend
+ExecStart=/usr/bin/slock
+
+[Install]
+WantedBy=sleep.target
+```
+
+`sudo systemctl enable slock@neonew.service`
+
 # Albert
 
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/albert.jpg)
