--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -293,6 +293,17 @@ WantedBy=sleep.target
 
 `sudo systemctl enable slock@neonew.service`
 
+# slick-greeter
+
+```
+yay -S lightdm-slick-greeter
+```
+
+HiDPI worked out of the box.  
+I've changed the background image in */etc/lightdm/slick-greeter.conf*.
+
+To test it without going to suspend, you can run `dm-tool switch-to-greeter`.
+
 # Albert
 
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/albert.jpg)
