--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -304,6 +304,40 @@ I've changed the background image in */etc/lightdm/slick-greeter.conf*.
 
 To test it without going to suspend, you can run `dm-tool switch-to-greeter`.
 
+# Power saving
+
+This is what powertop suggested me.
+
+*/etc/udev/rules.d/hd_power_save.rules*
+
+powertop suggested min_power, but Arch Wiki says it might lose data and doesn't save much more power.
+
+```
+ACTION=="add", SUBSYSTEM=="scsi_host", KERNEL=="host*", ATTR{link_power_management_policy}="med_power_with_dipm"
+```
+
+*/etc/udev/rules.d/50-usb_power_save.rules*
+
+This is for the fingerprint reader. Doesn't work anyway.
+
+```
+ACTION=="add", SUBSYSTEM=="usb", TEST=="power/control", ATTR{idVendor}=="27c6", ATTR{idProduct}=="5395", ATTR{power/control}="auto"
+```
+
+*/etc/udev/rules.d/pci_pm.rules*
+
+```
+SUBSYSTEM=="pci", ATTR{power/control}="auto"
+```
+
+*/etc/sysctl.d/98-powersaving.conf*
+
+```
+vm.dirty_writeback_centisecs = 1500
+```
+
+On idle I get ~7W power consumption.
+
 # Albert
 
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/albert.jpg)
