--- a/blog/_posts/2020-02-20-tauri.md
+++ b/blog/_posts/2020-02-20-tauri.md
@@ -178,6 +178,8 @@ $ ldd src-tauri/target/release/app
 
 File size is 6.6 MB.
 
+![]({{ site.baseurl }}/images/2020-02-20-tauri/tauri.png)
+
 # Dockerfile
 
 ```docker
