Tauri on Windows

--- a/blog/_posts/2020-02-20-tauri.md
+++ b/blog/_posts/2020-02-20-tauri.md
@@ -29,7 +29,9 @@ But beside that it looks super-promising imo:
 
 One (small) downside: You need to install a lot of dependencies. It's documented quite well, but you need to do it for each operating system of course.
 
-I've written a small docker image for builds on linux, because I don't like to pollute my system with thousands of dependencies,
+## Linux
+
+I've written a small docker image for builds on linux (see below), because I don't like to pollute my system with thousands of dependencies,
 and the resulting binary is executable without the dev-dependencies.
 
 I've ran `tauri init` once in the app directory, and now I can use this:
@@ -37,6 +39,35 @@ I've ran `tauri init` once in the app directory, and now I can use this:
 ```bash
 docker run -it --rm -v $(pwd):/root/app tauri tauri build
 ```
+
+## Windows
+
+Aha! Windows. You have to install the world. Prepare to spend some time on installing the prerequisites.
+
+I've started on a clean Win7 box and had to install this:
+
+- Windows Management Framework 5.1
+- .NET Framework 4.8
+- Powershell (optional)
+- Chocolatey (optional)
+- choco install git
+- choco install nodejs-lts
+- Visual Studio Build Tools (Note: Installing `visualstudio2019buildtools` was not sufficient, you need to install C++ support as well)  
+  Use the following Shell for all further commands: `x64 Native Tools Command Prompt for VS 2019`
+- rustup
+- cargo install tauri-bundler --force
+- cargo install tauri-bundler --force
+- npm install -g tauri
+
+Now, in the project directory, run the normal build
+
+- npm run build
+- tauri build
+
+And boom, you get a .exe file in the src-tauri/target/release folder.  
+Unfortunately I had an issue to execute the file, see [this issue](https://github.com/tauri-apps/tauri/issues/440).
+
+![]({{ site.baseurl }}/images/2020-02-20-tauri/tauri-error-win7.png)
 
 # Result
 
