--- a/blog/_posts/2020-02-20-tauri.md
+++ b/blog/_posts/2020-02-20-tauri.md
@@ -56,7 +56,7 @@ I've started on a clean Win7 box and had to install this:
   Use the following Shell for all further commands: `x64 Native Tools Command Prompt for VS 2019`
 - rustup
 - cargo install tauri-bundler --force
-- cargo install tauri-bundler --force
+- cargo install tauri-cli --force
 - npm install -g tauri
 
 Now, in the project directory, run the normal build
