Tizen: Add cli commands

--- a/blog/_posts/2020-06-22-tizen.md
+++ b/blog/_posts/2020-06-22-tizen.md
@@ -149,6 +149,20 @@ No npm, no SCSS, no TypeScript, no Babel, no Webpack, ...
 
 I hope that, too!
 
+# CLI commands I use
+
+```bash
+sdb connect 192.168.178.25
+sdb devices
+
+tizen clean
+tizen build-web
+tizen cli-config -l
+tizen package --type wgt -- ./.buildResult/
+tizen install -n ./.buildResult/MoonWatch.wgt
+tizen run -p KJAMc748fQ
+```
+
 # Modern web technologies
 
 My goal was to use TypeScript, SCSS, npm and webpack as technologies and Visual Studio Code and Google Chrome as development environment.
