Add image to MoonWatch tizen watch face

--- a/blog/_posts/2020-06-22-tizen.md
+++ b/blog/_posts/2020-06-22-tizen.md
@@ -7,6 +7,8 @@ tags:
 
 I want to share my experience developing a watch face for a Galaxy S3 Gear smartwatch.
 
+![]({{ site.baseurl }}/images/2020-06-22-tizen/DSC_3608_.jpg)
+
 You can find the resulting project here: [https://gitlab.com/andreas-mausch/moonwatch](https://gitlab.com/andreas-mausch/moonwatch)
 
 First off, it was difficult to set up a develop environment:  
