--- a/blog/_posts/2020-09-07-highscreen-386.md
+++ b/blog/_posts/2020-09-07-highscreen-386.md
@@ -24,6 +24,8 @@ That's why it cost me quite some time to find it on eBay and **386 Euro**.
 
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201936-pc.jpg)
 
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/IMG-20200213-WA0006-werbung.jpg)
+
 I've also ordered a Highscreen MP-24 BB dot matrix printer (29 Euro).
 And I was able to order a brand new ink ribbon for it (10 Euro). Incredible. :)
 
