One more 386 ad

--- a/blog/_posts/2020-09-07-highscreen-386.md
+++ b/blog/_posts/2020-09-07-highscreen-386.md
@@ -20,29 +20,30 @@ That's why it cost me quite some time to find it on eBay and **386 Euro**.
 
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200813_202113-ausgeschaltet.jpg)
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201853-keyboard-and-pc.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201853-keyboard-and-pc.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201936-pc.jpg){:width="48%"}
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201936-pc.jpg)
+Back in 1991 ads looked like this:
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/IMG-20200213-WA0006-werbung.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/IMG-20200213-WA0006-werbung.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/vobis-denkzettel-1991.jpg){:width="48%"}
 
 I've also ordered a Highscreen MP-24 BB dot matrix printer (29 Euro).
 And I was able to order a brand new ink ribbon for it (10 Euro). Incredible. :)
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200811_210621-printer.jpg){:height="300px"}
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200813_221326-printer.jpg){:height="300px"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200811_210621-printer.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200813_221326-printer.jpg){:width="48%"}
 
 The icing on the cake was the Highscreen Grey Scan 64 handset scanner (10 Euro), together with the original packaging and the ISA bus card.
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195518-highscreen-scanner.jpg){:height="400px"}
-
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195333-highscreen-scanner-box.jpg){:height="240px"}
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195409-highscreen-scanner-in-box.jpg){:height="240px"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195518-highscreen-scanner.jpg){:width="32%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195333-highscreen-scanner-box.jpg){:width="32%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195409-highscreen-scanner-in-box.jpg){:width="32%"}
 
 In order to transfer files to my "new" PC I use a USB floppy drive (15 Euro) and a bunch of floppy disks (about 1 Euro per piece, brand new and shrink-wrapped).
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200904_191422-floppy-disk.jpg){:height="300px"}
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200904_191530-floppy-usb-drive.jpg){:height="300px"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200904_191422-floppy-disk.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200904_191530-floppy-usb-drive.jpg){:height="260px"}
 
 # Copying files
 
