--- a/blog/_posts/2020-09-07-highscreen-386.md
+++ b/blog/_posts/2020-09-07-highscreen-386.md
@@ -23,6 +23,11 @@ That's why it cost me quite some time to find it on eBay and **386 Euro**.
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201853-keyboard-and-pc.jpg){:width="48%"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201936-pc.jpg){:width="48%"}
 
+<video style="display: block; margin-left: auto; margin-right: auto" controls>
+  <source src="{{ site.baseurl }}/images/2020-09-07-highscreen-386/VID_32750525_133650_266-booting.webm" type="video/webm; codecs=av01.0.05M.08,opus">
+  Your browser does not support the video tag.
+</video>
+
 Back in 1991 ads looked like this:
 
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/IMG-20200213-WA0006-werbung.jpg){:width="48%"}
