386: SoundBlaster screenshot & videos

--- a/blog/_posts/2020-09-07-highscreen-386.md
+++ b/blog/_posts/2020-09-07-highscreen-386.md
@@ -23,7 +23,7 @@ That's why it cost me quite some time to find it on eBay and **386 Euro**.
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201853-keyboard-and-pc.jpg){:width="48%"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201936-pc.jpg){:width="48%"}
 
-<video style="display: block; margin-left: auto; margin-right: auto" controls>
+<video style="display: block; margin-left: auto; margin-right: auto; max-width: 100%" controls>
   <source src="{{ site.baseurl }}/images/2020-09-07-highscreen-386/VID_32750525_133650_266-booting.webm" type="video/webm; codecs=av01.0.05M.08,opus">
   Your browser does not support the video tag.
 </video>
@@ -75,6 +75,27 @@ I love the sounds it makes:
 - Floppy drives
 - Speaker
 
+# SoundBlaster and Music trackers
+
+Due to the lack of a sound card as a kid, I've discovered the tracker softwares way later, but I'm in love with the looks of the tools.
+
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_183351-soundblaster-creative-ct4170.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_183411-soundblaster-creative-ct4170.jpg)
+
+Scream Tracker:
+
+<video style="display: block; margin-left: auto; margin-right: auto; max-width: 100%" controls>
+  <source src="{{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_203116-scream-tracker.webm" type="video/webm; codecs=vp9,opus">
+  Your browser does not support the video tag.
+</video>
+
+FastTracker:
+
+<video style="display: block; margin-left: auto; margin-right: auto; max-width: 100%" controls>
+  <source src="{{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_215742-fast-tracker.webm" type="video/webm; codecs=vp9,opus">
+  Your browser does not support the video tag.
+</video>
+
 # Games
 
 - Commander Keen
@@ -108,6 +129,11 @@ I've found that the combination of [lxsplit](http://lxsplit.sourceforge.net) and
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_201250-omf-fight.jpg){:height="240px"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_200053-tropfen-title-screen.jpg){:height="240px"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_200047-tropfen.jpg){:height="240px"}
+
+<video style="display: block; margin-left: auto; margin-right: auto; max-width: 100%" controls>
+  <source src="{{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_194310-soundcard-test-omf-2097.webm" type="video/webm; codecs=vp9,opus">
+  Your browser does not support the video tag.
+</video>
 
 # Software development
 
