--- a/blog/_posts/2020-09-07-highscreen-386.md
+++ b/blog/_posts/2020-09-07-highscreen-386.md
@@ -14,7 +14,7 @@ My second PC, and the one I've spent most time with, was a *Highscreen 386*.
 For nostalgia, I've decided to buy almost the exact model I had owned back then.
 Despite being a popular model, it was not that easy to find a functional computer together with it's original monitor, keyboard and mouse on the internet.
 
-# Accessories and prices
+# Hardware
 
 That's why it cost me quite some time to find it on eBay and **386 Euro**.
 
@@ -30,17 +30,24 @@ Back in 1991 ads looked like this:
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/IMG-20200213-WA0006-werbung.jpg){:width="48%"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/vobis-denkzettel-1991.jpg){:width="48%"}
 
+# Accessories
+
+## Printer: Highscreen MP-24 BB
+
 I've also ordered a Highscreen MP-24 BB dot matrix printer (29 Euro).
 And I was able to order a brand new ink ribbon for it (10 Euro). Incredible. :)
 
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200811_210621-printer.jpg){:width="48%"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200813_221326-printer.jpg){:width="48%"}
 
+## Scanner: Highscreen Grey Scan 64
+
 The icing on the cake was the Highscreen Grey Scan 64 handset scanner (10 Euro), together with the original packaging and the ISA bus card.
 
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195518-highscreen-scanner.jpg){:width="32%"}
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195333-highscreen-scanner-box.jpg){:width="32%"}
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195409-highscreen-scanner-in-box.jpg){:width="32%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195518-highscreen-scanner.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195333-highscreen-scanner-box.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_195409-highscreen-scanner-in-box.jpg){:width="48%"}
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5877-scanner-card.jpg){:width="48%"}
 
 In order to transfer files to my "new" PC I use a USB floppy drive (15 Euro) and a bunch of floppy disks (about 1 Euro per piece, brand new and shrink-wrapped).
 
@@ -77,13 +84,18 @@ I love the sounds it makes:
 Due to the lack of a sound card as a kid, I've discovered the tracker softwares way later, but I'm in love with the looks of the tools.
 
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_183351-soundblaster-creative-ct4170.jpg)
-![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200916_183411-soundblaster-creative-ct4170.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5876-soundblaster-creative-ct4170.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5880-case-opened.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5888-soundblaster-software.jpg)
 
 Scream Tracker:
 
 {% include video.html path="images/2020-09-07-highscreen-386/20200916_203116-scream-tracker.webm" type="video/webm; codecs=vp9,opus" %}
 
 FastTracker:
+
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5890-fasttracker.jpg)
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5892-fasttracker-close.jpg)
 
 {% include video.html path="images/2020-09-07-highscreen-386/20200916_215742-fast-tracker.webm" type="video/webm; codecs=vp9,opus" %}
 
@@ -161,3 +173,9 @@ sudo mount -o loop,ro -t vfat ~/Downloads/disk1.img ./floppy/
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_190418-windows-started.jpg){:height="240px"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_190425-windows-file-manager.jpg){:height="240px"}
 ![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/20200907_191224-windows-games.jpg){:height="240px"}
+
+# Other apps
+
+Lotus 1-2-3
+
+![]({{ site.baseurl }}/images/2020-09-07-highscreen-386/DSC_5894-lotus 1-2-3.jpg)
