Update NitroKey blog post

--- a/blog/_posts/2021-02-23-nitrokey.md
+++ b/blog/_posts/2021-02-23-nitrokey.md
@@ -7,8 +7,32 @@ tags: security
 
 I've used the following commands to get my NitroKey Pro running on Manjaro Linux.
 
+NitroKey is an alternative for the YubiKey, which is better known, cheaper, has more functionality...**BUT**:  
+The NitroKey's [hardware](https://github.com/Nitrokey/nitrokey-pro-hardware) and [firmware](https://github.com/Nitrokey/nitrokey-pro-firmware) are open source!
+
 I use my NitroKey mainly for [pass](https://www.passwordstore.org/), the "standard unix password manager",
 to keep my very important passwords top secret.
+
+So I don't really use FIDO2 or other features of a YubiKey.
+NitroKey provides a [comparison sheet](https://www.nitrokey.com/de#comparison) for their different keys,
+and as you can see you have to decide between gpg or FIDO2. Too bad.
+
+# Controversy about gpg
+
+Last month there was [a bug](https://lists.gnupg.org/pipermail/gnupg-announce/2021q1/000455.html) in libgcrypt,
+discovered by [Project Zero](https://bugs.chromium.org/p/project-zero/issues/detail?id=2145).
+
+It was published on January 28. A fixed libgcrypt version (1.9.1) was published the next day.
+
+[golem.de](https://www.golem.de/news/verschluesselung-gpg-muss-endlich-weg-2102-153820.html) said the main developer,
+Werner Koch, [reacted in an unprofessional way](https://dev.gnupg.org/T5279#142667) to the suggestion to introduce a CI.  
+My opinion: They (the ticket author Hanno and Werner Koch) seem to know each other and I don't give too much about decency. Nobody was hurt.
+
+It's further about the [lacking code quality](https://twitter.com/tqbf/status/1355176541139972098) of gpg.
+The only alternative mentioned is [RNP](https://github.com/rnpgp/rnp).
+
+However, gpg is the only OpenPGP implementation I know of which supports smartcards.
+So for me, I will continue using it. If anybody knows a good alternative, please let me know.
 
 # Pictures
 
@@ -102,7 +126,7 @@ ssb>  rsa4096 1999-01-01 [E]
 ```
 
 As you can see, the *Kartenseriennr* (english: card serial number) is shown.
-That means the reference to the NitroKey worked. Good work.
+That means the reference to the NitroKey was successfully installed. Good work.
 
 Try to run the decryption command from above again.
 It should now ask you for your PIN (default: 123456), and the NitroKey is queried by gpg.
@@ -137,3 +161,14 @@ gpg --output private.asc --armor --export-secret-key username@email
 If you run this on a key which was already moved to the NitroKey, this command will not fail,
 but only copies the *reference* to the private key.
 There is no (gpg) way to get access to the private key anymore. That's why you own a NitroKey, right?
+
+# Links
+
+I've scraped these sites during my setup:
+
+- [https://www.kuketz-blog.de/gnupg-schluesselerstellung-und-smartcard-transfer-nitrokey-teil2/](https://www.kuketz-blog.de/gnupg-schluesselerstellung-und-smartcard-transfer-nitrokey-teil2/)
+- [https://dokuwiki.nausch.org/doku.php/centos:nitrokey:pro](https://dokuwiki.nausch.org/doku.php/centos:nitrokey:pro)
+- [https://www.nitrokey.com/documentation/frequently-asked-questions-faq#openpgp-card-not-available](https://www.nitrokey.com/documentation/frequently-asked-questions-faq#openpgp-card-not-available)
+- [https://freundederlust.de/doku.php?id=lenovo_thinkpad_t460s#nitrokey](https://freundederlust.de/doku.php?id=lenovo_thinkpad_t460s#nitrokey)
+- [https://raymii.org/s/articles/Get_Started_With_The_Nitrokey_HSM.html](https://raymii.org/s/articles/Get_Started_With_The_Nitrokey_HSM.html)
+- [https://www.privacy-handbuch.de/handbuch_32r.htm](https://www.privacy-handbuch.de/handbuch_32r.htm)
