Update NitroKey blog post

--- a/blog/_posts/2021-02-23-nitrokey.md
+++ b/blog/_posts/2021-02-23-nitrokey.md
@@ -32,7 +32,12 @@ It's further about the [lacking code quality](https://twitter.com/tqbf/status/13
 The only alternative mentioned is [RNP](https://github.com/rnpgp/rnp).
 
 However, gpg is the only OpenPGP implementation I know of which supports smartcards.
-So for me, I will continue using it. If anybody knows a good alternative, please let me know.
+It might be of poor code quality, it might be missing a CI.
+While I usually insist on good test coverage and everything automated, I don't really have a choice here.
+Beside, I can't really judge gpg about those things, because I haven't taken a closer look.  
+So for me, I will continue using it.
+
+If anybody knows any alternative which works with smartcards, please let me know.
 
 # Pictures
 
