smbios-thermal-ctl

--- a/blog/_posts/2019-07-10-xps-7590.md
+++ b/blog/_posts/2019-07-10-xps-7590.md
@@ -333,6 +333,19 @@ vm.dirty_writeback_centisecs = 1500
 
 On idle I get ~7W power consumption.
 
+# smbios-thermal-ctl
+
+You can switch between different presets for your CPU, depending on your preference power vs. battery life.
+
+```bash
+sudo pacman -S libsmbios
+sudo smbios-thermal-ctl --info
+sudo smbios-thermal-ctl --get-thermal-info
+sudo smbios-thermal-ctl --set-thermal-mode=Balanced
+```
+
+See also here: [mtorressahli/linuxXPS9570](https://github.com/mtorressahli/linuxXPS9570)
+
 # Albert
 
 ![]({{ site.baseurl }}/images/2019-07-10-xps-7590/albert.jpg)
