Add chm screenshot

--- a/blog/_posts/2021-07-03-zeal.md
+++ b/blog/_posts/2021-07-03-zeal.md
@@ -18,6 +18,8 @@ I think the unfree MacOS tool [Dash](https://kapeli.com/dash) was there before, 
 
 Zeal reminds me of the good old .chm file format: [Microsoft Compiled HTML Help](https://en.wikipedia.org/wiki/Microsoft_Compiled_HTML_Help)
 
+![]({{ site.baseurl }}/images/2021-07-03-zeal/chm.png)
+
 # How to search
 
 - string will search all docsets for string
